--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.8",
     "cheerio": "^1.0.0",
