--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.5",
     "tailwind-scrollbar-hide": "^1.1.7",
