--- a/front/manifest.json
+++ b/front/manifest.json
@@ -1,9 +1,12 @@
 {
-  "manifest_version": 3,
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
-  "version": "1.0",
-  "action": {
-    "default_popup": "index.html"
-  }
+	"manifest_version": 3,
+	"name": "nm eat",
+	"description": "A cafeteria menu app for the IT headquarters in Pangyo.",
+	"version": "1.0",
+	"icons": {
+		"128": "128.png"
+	},
+	"action": {
+		"default_popup": "index.html"
+	}
 }
