--- a/front/package.json
+++ b/front/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
