--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,19 +1,18 @@
 server {
-    listen 443 ssl;
-    server_name yourdomain.com;
+        listen 443 ssl http2 default_server;
+        listen [::]:443 ssl http2 default_server;
 
-    ssl_certificate /etc/nginx/certs/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/privkey.pem;
+        ssl_certificate "/etc/nginx/certs/fullchain.pem";
+        ssl_certificate_key "/etc/nginx/certs/privkey.pem";
+        server_name nmeatapi.sangcheol.com;
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
-    location / {
-        proxy_pass http://nestjs:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+        location / {
+                proxy_set_header Host $host;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_pass http://nestjs:3000;
+        }
 }
