--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -6,6 +6,9 @@ server {
         ssl_certificate_key "/etc/nginx/certs/privkey.pem";
         server_name nmeatapi.sangcheol.com;
 
+        access_log /var/log/nginx/nmeatapi-access.log;
+        error_log /var/log/nginx/nmeatapi-error.log;
+
         location / {
                 proxy_set_header Host $host;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
