--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     volumes:
       - ./nginx/conf:/etc/nginx/conf.d
       - ../certs:/etc/nginx/certs
+      - /var/log/nginx:/var/log/nginx
     depends_on:
       - back
 
