--- a/front/vercel.json
+++ b/front/vercel.json
@@ -3,17 +3,12 @@
 		{
 			"source": "/(.*)",
 			"headers": [
-				{
-					"key": "Access-Control-Allow-Origin",
-					"value": "*"
-				},
-				{
-					"key": "Access-Control-Allow-Methods",
-					"value": "GET, POST, OPTIONS"
-				},
+				{ "key": "Access-Control-Allow-Credentials", "value": "true" },
+				{ "key": "Access-Control-Allow-Origin", "value": "*" },
+				{ "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
 				{
 					"key": "Access-Control-Allow-Headers",
-					"value": "Content-Type"
+					"value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
 				}
 			]
 		}
