--- a/front/package.json
+++ b/front/package.json
@@ -1,61 +1,61 @@
 {
-  "name": "nhn-eat-front",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build && cp manifest.json ./dist/",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.3",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@tanstack/react-query": "^5.62.0",
-    "axios": "^1.7.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "dayjs": "^1.11.13",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.468.0",
-    "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-router": "^7.0.1",
-    "react-toastify": "^10.0.6",
-    "recharts": "^2.14.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/axios": "^0.14.4",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.15",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
-  }
+	"name": "nhn-eat-front",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-select": "^2.1.3",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.2",
+		"@tanstack/react-query": "^5.62.0",
+		"axios": "^1.7.8",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"dayjs": "^1.11.13",
+		"js-cookie": "^3.0.5",
+		"lucide-react": "^0.468.0",
+		"react": "^18.3.1",
+		"react-day-picker": "8.10.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
+		"react-router": "^7.0.1",
+		"react-toastify": "^10.0.6",
+		"recharts": "^2.14.1",
+		"tailwind-merge": "^2.5.5",
+		"tailwind-scrollbar-hide": "^1.1.7",
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.13.0",
+		"@types/axios": "^0.14.4",
+		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^22.10.1",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.13.0",
+		"eslint-plugin-react-hooks": "^5.0.0",
+		"eslint-plugin-react-refresh": "^0.4.14",
+		"globals": "^15.11.0",
+		"postcss": "^8.4.49",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.9",
+		"tailwindcss": "^3.4.15",
+		"typescript": "~5.6.2",
+		"typescript-eslint": "^8.11.0",
+		"vite": "^5.4.10"
+	}
 }
